# fastapi-starter

./: .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_create_users_table.py
app/: main.py
app/api/v1/: auth.py  router.py  users.py
app/core/: config.py  database.py  dependencies.py  security.py
app/exceptions/: handlers.py
app/middleware/: cors.py  logging.py  timing.py
app/models/: base.py  user.py
app/schemas/: auth.py  common.py  user.py
app/services/: auth_service.py  user_service.py
tests/: conftest.py  test_auth.py  test_health.py  test_users.py
